--- a/style.css
+++ b/style.css
@@ -1,4 +1,25 @@
-body {background-color:tan;}
-h1{color:green;}
+body {
+  background-color: black;
+  font-family: arial;
+  color: white;
+}
+h1 {
+  color: grey;
+  font-family: verdana;
+}
+.maindiv {
+  background-color: white;
+  color: black;
+  width: 500px;
+  padding: 20px;
+  border-radius: 25px;
+  margin-left: 30%;
+  text-align: left;
+}
 
-
+.subdiv {
+  margin-left: 10%;
+}
+button {
+  height: 25px;
+}
